<resources xmlns:android="http://schemas.android.com/apk/res/android" xmlns:xliff="urn:oasis:names:tc:xliff:document:1.2">
    <string name="app_name">香橙</string>
    <string name="about_xiangcheng">关于香橙</string>
    <string name="about_update_stirng">版本更新</string>
    <string name="action_settings">setting</string>
    <string name="welcome_loading">loading...</string>
    <string name="waiting_loading">设置中...</string>
    <string name="title_personal_info">个人资料</string>
    <string name="title_personal_info_preset">设定目标</string>
    <string name="no_net">网络连接失败，请连接wifi后使用该功能</string>
    <string name="server_fault">网络不给力，请稍后再试</string>
    <string name="gender_hint_text1">根据性别你会获得</string>
    <string name="gender_hint_text2">有针对性的睡眠建议</string>
    <string name="birth_hint_text1">你是</string>
    <string name="birth_hint_text2">出生</string>
    <string name="birthinfo_text">根据年龄制定\n适合您的睡眠方案</string>
    <string name="birthinfo_next">下一步</string>
    <string name="profession_hint">快来与同行PK睡眠吧</string>
    <string name="timeset_hint_text1">根据个人资料</string>
    <string name="timeset_hint_text2">制定专属睡眠方案</string>
    <string name="timeset_hint_text3">确认作息时间</string>
    <string name="timeset_sleeptime">目标睡眠时间:</string>
    <string name="timeset_wakeuptime">目标起床时间:</string>
    <string name="timeset_btn_complete">完成</string>
    <string name="timeset_btn_complete_set">香橙帮您实现</string>
    <string name="timeset_btn_complete1">开启自动记录</string>
    <string name="time_format_type">:</string>
    <string name="fragment_ranking_title">排名</string>
    <string name="activity_setting_remind">智能提醒</string>
    <string name="activity_setting_hide">隐私设置</string>
    <string name="privacy_setting_hide">在附近的人中隐身</string>
    <string name="activity_setting_pillow">智能枕扣</string>
    <string name="activity_setting_title">设置</string>
    <string name="activity_setting_reset">重置基础信息</string>
    <string name="activity_setting_alert">修改预设睡眠时间</string>
    <string name="activity_setting_switch">打开睡眠通知</string>
    <string name="activity_setting_grade">去给五星好评</string>
    <string name="activity_setting_message">消息</string>
    <string name="activity_setting_messagesound">消息声音</string>
    <string name="activity_setting_messagevirble">消息震动</string>
    <string name="activity_setting_clear">清除缓存数据</string>
    <string name="activity_setting_update">软件更新</string>
    <string name="activity_setting_about">关于香橙</string>
    <string name="activity_setting_exit">退出登录</string>
    <string name="activity_message_title">消息</string>
    <string name="activity_message_friend">好友申请</string>
    <string name="activity_login_title">请登录</string>
    <string name="activity_login_message1">可以用以下账号登录</string>
    <string name="activity_login_message2">用香橙账号登录</string>
    <string name="activity_login_register">免费注册</string>
    <string name="activity_login_login">登录</string>
    <string name="activity_login_forgetpwd">忘记密码?</string>
    <string name="activity_login_hint_account">请输入未注册的手机号码</string>
    <string name="activity_login_hint_nickname">请设置昵称</string>
    <string name="activity_login_hint_pwd">输入验证码</string>
    <string name="activity_login_regis">快速注册</string>
    <string name="activity_login_hint_pwdagain">设置登录密码</string>
    <string name="activity_login_hint_authcode">输入验证码</string>
    <string name="info5">请根据实际情况</string>
    <string name="info6">手动纠正时间</string>
    <string name="info7">睡眠时间</string>
    <string name="info8">小时</string>
    <string name="info9">睡眠指数</string>
    <string name="info_back">返回</string>
    <string name="info_next">下一步</string>
    <string name="time_interval">—</string>
    <string name="alert_cancel">取消</string>
    <string name="title_sleep">实际睡眠时间:</string>
    <string name="title_awake">实际起床时间:</string>
    <string name="time_default">00:00</string>
    <string name="timepicker_title">请选择时间</string>
    <string name="numberpicker_title">请设置提前提醒分钟数</string>
    <string name="case_submit">提交</string>
    <string name="check_time_empty">时间设置不完整</string>
    <string name="popupwindow_dayview">日视图</string>
    <string name="popupwindow_weekview">周视图</string>
    <string name="layout_day_sleep_beautytime">睡美容觉时间22pm-2am</string>
    <string name="layout_day_sleep_sleeptime">入睡</string>
    <string name="layout_day_sleep_wakeuptime">起床</string>
    <string name="layout_day_sleep_beauty">美容觉</string>
    <string name="layout_day_sleep_asleeptime">入睡时间</string>
    <string name="layout_day_sleep_duration">睡眠时长</string>
    <string name="layout_day_sleep_getuptime">起床时间</string>
    <string name="layout_day_sleep_phone">当日活动及睡眠时间分布</string>
    <string name="layout_day_sleep_health">目标时间</string>
    <string name="layout_day_sleep_s">睡眠</string>
    <string name="layout_week_sleep_total">总共</string>
    <string name="layout_week_sleep_deep">深度</string>
    <string name="layout_week_sleep_shallow">浅度</string>
    <string name="layout_week_sleep_accumulate">本周累积</string>
    <string name="layout_week_sleep_average">平均每天</string>
    <string name="layout_week_sleep_h">h</string>
    <string name="layout_week_sleep_beautysleep">美容觉统计</string>
    <string name="layout_alert_commit">确认修改</string>
    <string name="tab_occupation_ranking_sleep">昨日睡眠</string>
    <string name="tab_occupation_ranking_sleepave">职业平均</string>
    <string name="tab_occupation_ranking_loginhint">想知道同职业的睡眠情况吗？\n那就赶紧登录吧</string>
    <string name="UserName">UserName</string>
    <string name="UserPwd">UserPwd</string>
    <string name="sdk_error">未检测到sd卡</string>
    <string name="login" formatted="false">{\"type\":\"1001\",\"phone\":\"%s\",\"pwd\":\"%s\"}</string>
    <string name="system_netbreak">网络连接不可用，请稍后重试</string>
    <string name="fragment_alarm_title_string">闹钟</string>
    <string name="fragment_alarm_edit_string">编辑</string>
    <string name="fragment_alarm_sleepremind_string">橙橙睡前提醒</string>
    <string name="fragment_alarm_awakelarm_string">橙橙叫醒闹钟</string>
    <string name="ringtone_select_title_string">铃声</string>
    <string name="ringtone_select_ok_string">立即找回</string>
    <string name="ringtone_select_current_string">当前铃声</string>
    <string name="ringtone_select_recommend_string">为您推荐</string>
    <string name="ringtone_select_more_string">查看更多铃声</string>
    <string name="ringtone_select_local_string">查看本地铃声</string>
    <string name="remind_alarm_title_string">睡前提醒</string>
    <string name="remind_alarm_text1_string">提前</string>
    <string name="remind_alarm_text2_string">分钟</string>
    <string name="remind_alarm_text3_string">提醒间隔</string>
    <string name="awake_alarm_title_string">编辑</string>
    <string name="awake_alarm_text1_string">重复</string>
    <string name="awake_alarm_text2_string">小睡</string>
    <string name="awake_alarm_sleep5_string">5分钟</string>
    <string name="awake_alarm_sleep10_string">10分钟</string>
    <string name="awake_alarm_sleep15_string">15分钟</string>
    <string name="awake_alarm_sleep30_string">30分钟</string>
    <string name="awake_alarm_select_repeat0">日</string>
    <string name="awake_alarm_select_repeat1">一</string>
    <string name="awake_alarm_select_repeat2">二</string>
    <string name="awake_alarm_select_repeat3">三</string>
    <string name="awake_alarm_select_repeat4">四</string>
    <string name="awake_alarm_select_repeat5">五</string>
    <string name="awake_alarm_select_repeat6">六</string>
    <string name="dialog_play_ringtone_set">设为铃声</string>
    <string name="dialog_play_ringtone_add">加为好友</string>
    <string name="dialog_play_ringtone_look">查看资料</string>
    <string name="fragment_alarm_sleepremind_string_new">橙橙智能提醒</string>
    <string name="activity_explanation_title">香橙说明</string>
    <string name="activity_explanation_brief">香橙简介</string>
    <string name="activity_explanation_operate_suggest">操作建议</string>
    <string name="activity_explanation_notice">处女座用户须知：</string>
    <string name="activity_explanation_start">关闭</string>
    <string name="activity_explanation_record_sleep">记录睡眠：</string>
    <string name="activity_explanation_data">数据展示：</string>
    <string name="activity_explanation_background">后台记录：</string>
    <string name="activity_explanation_record_sleepcon">自动记录，无需操作</string>
    <string name="activity_explanation_datacon">起床点开APP，查看昨晚睡眠；</string>
    <string name="activity_explanation_backgroundcon">后台工作，切勿关闭</string>
    <string name="activity_explanation_operate_suggestcon">\u3000无需将手机放在枕边，建议将手机放置在平整的桌面。</string>
    <string name="activity_explanation_noticecon">\u3000考虑亲们的特殊习惯，香橙为您提供精确的修改入口，可以达到精确到分哦。</string>
    <string name="activity_explanation_tip">点击修改</string>
    <string name="activity_resetpassword_title">密码重置</string>
    <string name="activity_resetpassword_declare">密码重置功能目前只针对手机注册或绑定用户开放，如给您带来不便请原谅！</string>
    <string name="activity_resetpassword_verifyok">验证成功，请输入您的新密码并确认修改</string>
    <string name="activity_phone_bound_title">手机绑定</string>
    <string name="activity_phone_bound_declare">绑定手机号，让好友可以快速查找添加您为好友</string>
    <string name="activity_phone_bound_ok">免费绑定</string>
    <string name="activity_search_explain">您可以根据好友的手机号或昵称进行查询来添加好友；也可以将自己的手机号或昵称复制发送给好友，让好友来添加您。</string>
    <string name="bind_pillow_text1">点击开始绑定香橙</string>
    <string name="bind_pillow_text2">SmartPillow ONE</string>
    <string name="bind_pillow_text3">检测到蓝牙功能未开启</string>
    <string name="bind_pillow_text4">无法连接香橙智能枕扣</string>
    <string name="bind_pillow_text5">点击下方“开启蓝牙”按钮后，请在设置页面中开启蓝牙</string>
    <string name="bind_pillow_text6">开启蓝牙</string>
    <string name="bind_pillow_text7">取消绑定</string>
    <string name="bind_pillow_text8">点击设备顶部开关，激活香橙智能睡眠枕扣（指示灯亮起为激活状态），并让手机尽量靠近智能枕扣</string>
    <string name="bind_pillow_text9">正在搜索设备，请稍候...</string>
    <string name="bind_pillow_text10">绑定失败</string>
    <string name="bind_pillow_text11">重新搜索</string>
    <string name="bind_pillow_text12">请尝试将您的手机贴近智能枕扣，并确认枕扣的指示灯是否亮起（设备是否开启），然后重新搜索</string>
    <string name="bind_pillow_text13">下拉开启香橙枕扣</string>
    <string name="bind_pillow_text14">上滑返回数据页面</string>
    <string name="bind_pillow_text15">橙橙检测到多个枕扣，一个app只能绑定一个枕扣，请只开启需要绑定的智能枕扣。</string>
    <string name="bind_pillow_text16">绑定失败</string>
    <string name="bind_pillow_text17">找到设备开始绑定...</string>
    <string name="bind_pillow_text18">同步数据</string>
    <string name="bind_pillow_text19">SmartPillow ONE 电量</string>
    <string name="bind_pillow_text20">单击Orange键，并将</string>
    <string name="bind_pillow_text21">SmartPillow ONE靠近您的手机</string>
    <string name="bind_pillow_text22">长按Orange键3秒，香橙指示灯开始\n闪烁后，将手机靠近设备</string>
    <string name="bind_pillow_text23">若香橙指示灯停止闪烁，请重新长按\n Orange键3秒</string>
    <string name="bind_pillow_text24">解除绑定</string>
    <string name="bind_pillow_text25">解除绑定后，香橙智能枕扣将停止记录</string>
    <string name="bind_pillow_text26">解除绑定后，可使用其他手机连接香橙智能枕扣或者更换新枕扣</string>
    <string name="smart_remind_tv_day">白天提醒</string>
    <string name="smart_remind_tv_night">睡前提醒</string>
    <string name="net_requet_exception_tip">未知异常</string>
    <string name="net_requet_error_tip">未知错误</string>
    <string-array name="day_sleeptime_normal" formatted="false">
        <item>您昨晚按时睡觉，起床喝杯温水顺通肠胃,再去厕所拉个粑粑，排出毒素一身轻松！</item>
        <item>早上好！昨晚有按时入睡哦，伸个懒腰，起床吧。</item>
        <item>Good Morning！您已经完全掌握了中医养生睡眠时间，好棒啊！</item>
        <item>哦嚯嚯！您挺懂养生知识的嘛，早睡早起身体好！</item>
        <item>您昨晚有按时睡觉哦，早早的睡了皮肤会很好的哦!</item>
    </string-array>
    <string name="release_conversation_label_owned">已有标签</string>
    <string name="release_conversation_label_host">热门标签</string>
    <string name="release_conversation_label_tips">提示：添加标签后便于更多人搜到你的文章</string>
    <string name="string_title">标题</string>
    <string name="string_time">时间</string>
    <string name="string_repeat">重复</string>
    <string name="string_content">内容</string>
    <string name="string_share">共享</string>
    <string name="string_rings">铃音</string>
    <string name="tips_message_content">弹出消息提示内容(20字以内)</string>
    <string name="tips_share_reminds">共享给您身边的人，一起来参与</string>
</resources>